control overhaul